apps/app/manifest.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: app
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: app
spec:
  selector:
    matchLabels:
      app: app
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - env:
        - name: NODE_ENV
          value: production
        - name: PORT
          value: '3000'
        - name: HOSTNAME
          value: 0.0.0.0
        - name: NITRO_PORT
          value: '3000'
        - name: DATABASE_URL
          valueFrom:
            secretKeyRef:
              key: uri
              name: app-db-app
        image: registry.ide-newton.ts.net/lab/app@sha256:2ff35a9e4e2d442da1d2585d6603c4a862e93aaa6ba36caeef0df05b786f70f3
        name: app
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: '1'
            memory: 512Mi
          requests:
            cpu: 200m
            memory: 256Mi
      nodeSelector:
        kubernetes.io/arch: arm64
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: app
  namespace: app
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`app.proompteng.ai`)
    services:
    - name: app
      port: 3000
  tls: {}
